added /ware/info route
