# routes/water.js
@@ -10,6 +10,7 @@ const {
   updateWater,
   removeWaterInfo,
   getWaterToday,
+  getWaterPerMonth,
 } = require("../controllers/water.js");
 
 router.use(authenticate);
@@ -23,5 +24,10 @@ router.patch(
   updateWater
 );
 router.get("/today", getWaterToday);
+router.patch(
+  "/month/info",
+  validateBody(schemas.getWaterInfoMonthJoiSchema),
+  getWaterPerMonth
+);
 
 module.exports = router;
