# swagger.json
@@ -448,6 +448,49 @@
           }
         }
       }
+    },
+    "/water/month/info": {
+      "patch": {
+        "tags": ["Water"],
+        "summary": "Get a list of daily water data for a given month.",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "description": "Date",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/WaterDateRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/WaterDateResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          },
+          "401": {
+            "description": "Not authorized!",
+            "content": {}
+          },
+          "404": {
+            "description": "Date is note correct!",
+            "content": {}
+          }
+        }
+      }
     }
   },
   "components": {
@@ -689,6 +732,66 @@
               "_id": "656dc860f4cebbf99c5d6520"
             }
           ]
+        }
+      },
+      "WaterDateRequest": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "date",
+            "description": "Date",
+            "example": "2023-12-03T12:39:08.018+00:00"
+          }
+        },
+        "example": {
+          "date": "2023-12-03T12:39:08.018+00:00"
+        }
+      },
+      "WaterDateResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "date": {
+              "type": "object",
+              "properties": {
+                "day": {
+                  "type": "number",
+                  "description": "Day value",
+                  "example": "5"
+                },
+                "month": {
+                  "type": "number",
+                  "description": "Month value",
+                  "example": "12"
+                }
+              }
+            },
+            "dailyNorma": {
+              "type": "number",
+              "description": "Water daily norma",
+              "example": "10000"
+            },
+            "percent": {
+              "type": "number",
+              "description": "The percent from dailyWater",
+              "example": "45"
+            },
+            "quantity": {
+              "type": "number",
+              "description": "Total number of water intakes per day",
+              "example": "45"
+            }
+          }
+        },
+        "example": {
+          "date": {
+            "day": 1,
+            "month": 12
+          },
+          "dailyNorma": 10000,
+          "percent": 0,
+          "quantity": 0
         }
       }
     },
